Added DTO:s for every entity as well as mapper classes to convert to and from DTO:s. Cleaned up in controller and service